Add separat thread pool for API key hashing
Also return 429 when either GET or the hashing thread pool is saturated.